exports[`components:Agents: renders without crashing 1`] = `
<div>
  <h1>
    Agents
    <button
      action="push"
      className="pull-right btn btn-default"
      disabled={false}
      onClick={[Function]}
      type="button">
      Create
    </button>
  </h1>
  <div
    className="list-group">
    <a
      className="list-group-item"
      onClick={[Function]}
      style={Object {}}>
      <h4
        className="list-group-item-heading truncate">
        Default agent (Me)
      </h4>
      <p
        className="list-group-item-text truncate">
        Yeap, that\'s me
      </p>
    </a>
  </div>
  <ul
    className="pager">
    <li
      className="disabled previous"
      style={undefined}>
      <a
        action="push"
        href="#"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "pointerEvents": "none",
          }
        }
        tabIndex={-1}>
        Previous Page
      </a>
    </li>
    <li
      className="disabled next"
      style={undefined}>
      <a
        action="push"
        href="#"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "pointerEvents": "none",
          }
        }
        tabIndex={-1}>
        Next Page
      </a>
    </li>
  </ul>
</div>
`;

exports[`components:Agents: renders without crashing without agent elements 1`] = `
<div>
  <h1>
    Agents
    <button
      action="push"
      className="pull-right btn btn-default"
      disabled={false}
      onClick={[Function]}
      type="button">
      Create
    </button>
  </h1>
  <ul
    className="list-group" />
  <ul
    className="pager">
    <li
      className="disabled previous"
      style={undefined}>
      <a
        action="push"
        href="#"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "pointerEvents": "none",
          }
        }
        tabIndex={-1}>
        Previous Page
      </a>
    </li>
    <li
      className="disabled next"
      style={undefined}>
      <a
        action="push"
        href="#"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "pointerEvents": "none",
          }
        }
        tabIndex={-1}>
        Next Page
      </a>
    </li>
  </ul>
</div>
`;
